--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <span id="author"></span>
         <!-- Buttons -->
         <div class="buttons-container">
-            <button class="twitter-button" id="twitter" title="tweet it!">
+            <div><button class="twitter-button" id="twitter" title="tweet it!">
                 <i class="fab fab fa-twitter"></i>
-            </button>
-          <button id="new-quote">New Quote</button>
+            </button></div>
+        <div><button id="new-quote">New Quote</button></div>
         </div>
     </div>
  </div>
